<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#be5f1b"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_x"
            android:textSize="22sp"
            android:fontFamily="monospace"
            android:paddingRight="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:id="@+id/scorex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="@string/_0"
           />
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="8dp"
            />
        <TextView
            android:id="@+id/scoreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_gravity="center"
            android:textSize="22sp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_o"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="22sp"
            android:fontFamily="monospace"/>
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetScore"
        style="?attr/buttonStyle"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

<GridLayout
    android:id="@+id/activity_game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:rowCount="5"
    tools:context="lk.peruma.tictactoe.GameActivity">

    <Button
        android:id="@+id/button00"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0]0]" />

    <Button
        android:id="@+id/button01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0][1]" />

    <Button
        android:id="@+id/button02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0][2]" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][0]" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][1]" />


    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][2]" />

    <Button
        android:id="@+id/button20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][0]" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][1]" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][2]" />

    <TextView
        android:id="@+id/textGameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_row="4"
        android:gravity="center|fill"
        android:text="@string/winer"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/new_board" />


</GridLayout>
</LinearLayout>

