<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#be5f1b"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_x"
                android:textSize="22sp"
                android:fontFamily="monospace"
                android:paddingRight="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:id="@+id/scorex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:text="0"
                />
            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                />
            <TextView
                android:id="@+id/scoreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"
                android:textSize="22sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_o"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textSize="22sp"
                android:fontFamily="monospace"/>
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetScore"
            style="?attr/buttonStyle"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="5"
    android:rowCount="7"
    tools:context="lk.peruma.tictactoe.Game5X5">

    <Button
        android:id="@+id/button002"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0]0]"
         />
    <Button
        android:id="@+id/button012"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0]1]"
        />
    <Button
        android:id="@+id/button022"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0]2]"/>
    <Button
        android:id="@+id/button032"
        android:layout_width="0dp"
        android:layout_height="0dp"
         android:layout_column="3"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0]3]"/>
    <Button
        android:id="@+id/button042"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[0][4]"/>
    <Button
        android:id="@+id/button102"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"

        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1]0]"
        />
    <Button
        android:id="@+id/button112"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][1]"
        />
    <Button
        android:id="@+id/button122"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1]2]"/>
    <Button
        android:id="@+id/button132"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][3]"/>
    <Button
        android:id="@+id/button142"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="4"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[1][4]"/>


    <Button
        android:id="@+id/button202"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][0]"
        />
    <Button
        android:id="@+id/button212"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][1]"
        />
    <Button
        android:id="@+id/button222"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][2]"/>
    <Button
        android:id="@+id/button232"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][3]"/>
    <Button
        android:id="@+id/button242"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[2][4]"/>

    <Button
        android:id="@+id/button302"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[3][0]"
        />
    <Button
        android:id="@+id/button312"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[3][1]"
        />
    <Button
        android:id="@+id/button322"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[3][2]"/>
    <Button
        android:id="@+id/button332"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[3][3]"/>
    <Button
        android:id="@+id/button342"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="4"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[3][4]"/>

    <Button
        android:id="@+id/button402"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[4][0]"
        />
    <Button
        android:id="@+id/button412"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[4][1]"
        />
    <Button
        android:id="@+id/button422"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:onClick="onClick"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[4][2]"/>
    <Button
        android:id="@+id/button432"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:onClick="onClick"
        android:layout_rowWeight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[4][3]"/>
    <Button
        android:id="@+id/button442"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:tag="[4][4]"/>
    <TextView
        android:id="@+id/textGameStatus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_row="5"
        android:gravity="center|fill"
        android:text="Winer: "
        android:textAppearance="@android:style/TextAppearance.Large" />
    <Button
        android:id="@+id/buttonNewGame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_row="6"
        android:text="New Game" />


</GridLayout>

</LinearLayout>